--- a/colors.html
+++ b/colors.html
@@ -24,9 +24,9 @@ main()
 }
 </script>
 
-<script type="text/javascript" src="./common/webgl-utils.js"></script>
-<script type="text/javascript" src="./common/initShaders.js"></script>
-<script type="text/javascript" src="./common/MV.js"></script>
+<script type="text/javascript" src="https://www.cs.unm.edu/~angel/WebGL/Common/webgl-utils.js"></script>
+<script type="text/javascript" src="https://www.cs.unm.edu/~angel/WebGL/Common/initShaders.js"></script>
+<script type="text/javascript" src="https://www.cs.unm.edu/~angel/WebGL/Common/MV.js"></script>
 <script type="text/javascript" src="./interpolation.js"></script>
 <script type="text/javascript" src="./colors.js"></script>
 </head>
