--- a/reflex.html
+++ b/reflex.html
@@ -24,10 +24,9 @@
         gl_FragColor = vec4( 1.0, 1.0, 1.0, 1.0 );
     }
     </script>
-
-    <script type="text/javascript" src="./common/webgl-utils.js"></script>
-    <script type="text/javascript" src="./common/initShaders.js"></script>
-    <script type="text/javascript" src="./common/MV.js"></script>
+    <script type="text/javascript" src="https://www.cs.unm.edu/~angel/WebGL/Common/webgl-utils.js"></script>
+    <script type="text/javascript" src="https://www.cs.unm.edu/~angel/WebGL/Common/initShaders.js"></script>
+    <script type="text/javascript" src="https://www.cs.unm.edu/~angel/WebGL/Common/MV.js"></script>
     <script type="text/javascript" src="./reflex.js"></script>
     </head>
 
