--- a/tetrix.html
+++ b/tetrix.html
@@ -50,9 +50,9 @@ main()
 }
 </script>
 
-<script type="text/javascript" src="./common/webgl-utils.js"></script>
-<script type="text/javascript" src="./common/initShaders.js"></script>
-<script type="text/javascript" src="./common/MV.js"></script>
+<script type="text/javascript" src="https://www.cs.unm.edu/~angel/WebGL/Common/webgl-utils.js"></script>
+<script type="text/javascript" src="https://www.cs.unm.edu/~angel/WebGL/Common/initShaders.js"></script>
+<script type="text/javascript" src="https://www.cs.unm.edu/~angel/WebGL/Common/MV.js"></script>
 <script type="text/javascript" src="tetrix.js"></script>
 </head>
 
